// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings with headline data should render correctly 1`] = `
<ForwardRef>
  <ForwardRef
    text="This is a headline!"
  >
    <Blocks
      blocks={
        Array [
          Object {
            "model": Object {
              "attributes": Array [],
              "text": "This is a headline!",
            },
            "type": "fragment",
          },
        ]
      }
      componentsToRender={
        Object {
          "fragment": [Function],
        }
      }
    />
  </ForwardRef>
</ForwardRef>
`;

exports[`Headings with subheadline data should render correctly 1`] = `
<ForwardRef>
  <ForwardRef
    text="This is a subheadline"
  >
    <Blocks
      blocks={
        Array [
          Object {
            "model": Object {
              "attributes": Array [],
              "text": "This is a subheadline",
            },
            "type": "fragment",
          },
        ]
      }
      componentsToRender={
        Object {
          "fragment": [Function],
        }
      }
    />
  </ForwardRef>
</ForwardRef>
`;
